2014-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* tests/010/output-clauses.expected: New file.

	* tests/010/output-clauses.txr: New file.

2014-02-28  Kaz Kylheku  <kaz@kylheku.com>

	About time for some new regression tests.

	* tests/011/macros-1.expected: New file.

	* tests/011/macros-1.txr: New file.

	* tests/011/macros-2.expected: New file.

	* tests/011/macros-2.txr: New file.

	* tests/011/special-1.expected: New file.

	* tests/011/special-1.txr: New file.

2014-02-28  Kaz Kylheku  <kaz@kylheku.com>

	Bugfixing semantics of symbol macro hiding by variable bindings.

	* eval.c (expand_vars): Expand vars needs to know whether it's
	handling a sequential (let*-like) or parallel (let-like) binding.
	The init form of a variable sees the previous macro environment,
	but that variable must, for the remaining variables, shadow any
	previous symbol macro.
	(expand): In expand we must inform expand_vars whether we have
	a sequential or parallel binding construct. Moreover, there was
	a huge bug here: the new_menv (with the shadows) was passed to
	expand_vars, so that all the variables were hiding same-named
	symbol macros from all their initforms.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (delay_s): Global variable removed.
	(eval_init): Initialiation of delay_s removed.
	Symbol now interned in reg_mac call for registering me_delay .

	* genvim.txr: Updated to recognize a reg_mac call
	with intern.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Improved documentation for the dwim operator.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 82

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date, improved the documentation
	for the copy function and copy-list, and fixed the
	an instance where the delay macro was called a function.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim: Updated.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Typos, grammar and formatting fixes mailed in
	by Roman Mishin.
